updated cv and pubs

--- a/cv.yaml
+++ b/cv.yaml
@@ -37,7 +37,7 @@ order:
 
 news:
   - date: August 2019
-    info: "Paper on Visual Pose Forecasting for Personalized Avatar during Dyadic Conversations accepted at ICMI'19 <a href='http://chahuja.com/trontr'>[webpage]</a>"
+    info: "Paper on Visual Pose Forecasting for Personalized Avatar during Dyadic Conversations accepted at ICMI'19 <a href='https://arxiv.org/pdf/1910.02181.pdf'>[pdf]</a><a href='http://chahuja.com/trontr'>[webpage]</a>"
   - date: August 2019
     info: "Honourable mention in LTI SRS symposium on my talk on Natural Language Grounded Pose Forecasting"
   - date: July 2019
