--- a/cv.yaml
+++ b/cv.yaml
@@ -23,7 +23,7 @@ order:
   # - [education, Education]
   # - [industry, Experience]
   # - [research, Research Experience]
-  - [book_chapters, Book Chapters]
+  - [book_publications, Book Chapters]
   - [selected_publications, Selected Publications]
   # - [NEWPAGE, NEWPAGE]
   # - [teaching, Teaching Experience]
@@ -57,6 +57,6 @@ selected_publications:
   name: "C. Ahuja"
   file: selected.bib
 
-book_chapters:
+book_publications:
   name: "C. Ahuja"
   file: book.bib
